force-app/main/default/objects/NCMT_Project_Deliverable__c/NCMT_Project_Deliverable__c.object-meta.xml
<CustomObject>
    <label>NCMT Project Deliverable</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT Project Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>