force-app/main/default/objects/NCMT_Project_Deliverable__c/fields/Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget__c</fullName>
    <label>Project Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$25k and Under</fullName>
            </value>
            <value>
                <fullName>$25k to Simplified Acqusition Threshold</fullName>
            </value>
            <value>
                <fullName>Simplified Acquisition Threshold to Prospectus</fullName>
            </value>
            <value>
                <fullName>Prospectus &lt;&gt; $5M</fullName>
            </value>
            <value>
                <fullName>$5M &lt;&gt; $25M</fullName>
            </value>
            <value>
                <fullName>$25M &lt;&gt; $50M</fullName>
            </value>
            <value>
                <fullName>$50M&lt;&gt;$100M</fullName>
            </value>
            <value>
                <fullName>&gt;$100M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>