force-app/main/default/objects/NCMT_Project_Deliverable__c/fields/Project_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Project_Delivery_Method__c</fullName>
    <label>Project Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design-Bid-Build</fullName>
                <default>true</default>
                <label>Design-Bid-Build</label>
            </value>
            <value>
                <fullName>CMc</fullName>
            </value>
            <value>
                <fullName>Design Build - Bridging</fullName>
            </value>
            <value>
                <fullName>Design Build - Owned</fullName>
            </value>
            <value>
                <fullName>Build to Suit Lease</fullName>
            </value>
            <value>
                <fullName>TI - Leasing</fullName>
            </value>
            <value>
                <fullName>IDIQ-JOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>