force-app/main/default/objects/NCMT_Project_Deliverable__c/fields/Project_Phases__c.field-meta.xml
<CustomField>
    <fullName>Project_Phases__c</fullName>
    <inlineHelpText>The phase assigned per selection on the Project Setup screen</inlineHelpText>
    <label>Project Phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Initiation</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Project Close-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>