force-app/main/default/objects/NCMT_Project_Deliverable__c/fields/Project_SubPhase__c.field-meta.xml
<CustomField>
    <fullName>Project_SubPhase__c</fullName>
    <label>Project SubPhase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Evaluation Report</fullName>
            </value>
            <value>
                <fullName>Scope Definition</fullName>
            </value>
            <value>
                <fullName>Services Acquisition</fullName>
            </value>
            <value>
                <fullName>Feasibility Study- 50%</fullName>
            </value>
            <value>
                <fullName>Feasibility Study- 90%</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Feasibility Study- 100%</fullName>
            </value>
            <value>
                <fullName>Program Development Study (PDS)- 50%</fullName>
            </value>
            <value>
                <fullName>Program Development Study (PDS)- 90%</fullName>
            </value>
            <value>
                <fullName>Program Development Study (PDS)- 100%</fullName>
            </value>
            <value>
                <fullName>Vendor Acquisition</fullName>
            </value>
            <value>
                <fullName>Request For Lease Proposal / Program of Requirements</fullName>
            </value>
            <value>
                <fullName>Annual Work Plan</fullName>
            </value>
            <value>
                <fullName>Concept Design- Preliminary</fullName>
            </value>
            <value>
                <fullName>Concept Design- Draft Final</fullName>
            </value>
            <value>
                <fullName>Concept Design- Field Investigation Report</fullName>
            </value>
            <value>
                <fullName>Concept Design - VM Study</fullName>
            </value>
            <value>
                <fullName>Concept Design- Final</fullName>
            </value>
            <value>
                <fullName>Design Development- Pre-VE</fullName>
            </value>
            <value>
                <fullName>DID Submission</fullName>
            </value>
            <value>
                <fullName>Design Development- VM Study</fullName>
            </value>
            <value>
                <fullName>Design Development- Final</fullName>
            </value>
            <value>
                <fullName>Construction Documents- 75% CD</fullName>
            </value>
            <value>
                <fullName>Construction Documents- 90% CD</fullName>
            </value>
            <value>
                <fullName>Construction Documents- 100% CD</fullName>
            </value>
            <value>
                <fullName>Pre- Bid</fullName>
            </value>
            <value>
                <fullName>Post Award</fullName>
            </value>
            <value>
                <fullName>Progress Payment Management</fullName>
            </value>
            <value>
                <fullName>Construction Modification Management</fullName>
            </value>
            <value>
                <fullName>Administrative Close-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>