force-app/main/default/objects/NCMT_Project_Deliverable__c/fields/Project_type__c.field-meta.xml
<CustomField>
    <fullName>Project_type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build-to-Suit</fullName>
            </value>
            <value>
                <fullName>Modernization</fullName>
            </value>
            <value>
                <fullName>Multi System</fullName>
            </value>
            <value>
                <fullName>Multi Bldg Systems</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Single Bldg, Single System</fullName>
            </value>
            <value>
                <fullName>Single Item</fullName>
            </value>
            <value>
                <fullName>Tenant Fit-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>